优化存储策略和控制器代码
1. 将内部类 StorageBackendInfo、StrategyRequest、WeightRequest 提取到单独的文件中
2. 简化 StorageStrategy 接口，移除不必要的参数
3. 优化 ConfigurableStorageStrategy 实现，使用 switch 表达式
4. 简化 FolderUploadServiceImpl 中的存储服务选择方法
5. 优化控制器构造函数注入方式